crates/rome_formatter/tests/specs/prettier/typescript/decorators-ts/property-decorator.ts.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 123
expression: property-decorator.ts

---
# Input
```js
class Greeter {
  @format("Hello, %s") greeting: string;

  constructor(message: string) {
    this.greeting = message;
  }
  greet() {
    let formatString = getFormat(this, "greeting");
    return formatString.replace("%s", this.greeting);
  }
}

```

# Output
```js
class Greeter {
  @format("Hello, %s") greeting: string;

  constructor(message: string) {
    this.greeting = message;
  }
  greet() {
    let formatString = getFormat(this, "greeting");
    return formatString.replace("%s", this.greeting);
  }
}

```

# Errors
```
error[SyntaxError]: expected an identifier, a string literal, a number literal, a private field name, or a computed name but instead found '@'
  ┌─ property-decorator.ts:2:3
  │
2 │   @format("Hello, %s") greeting: string;
  │   ^ Expected an identifier, a string literal, a number literal, a private field name, or a computed name here

error[SyntaxError]: expected a parameter but instead found '"Hello, %s"'
  ┌─ property-decorator.ts:2:11
  │
2 │   @format("Hello, %s") greeting: string;
  │           ^^^^^^^^^^^ Expected a parameter here


```


